[package]
name = "i2c"
version = "0.1.0"
authors = ["osama530"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
cortex-m = "0.6"


[dependencies.stm32f3]
version = "0.10.0"
features = ["stm32f303", "rt"]

[profile.release]
lto = true
debug = true